src/app/components/search/search.component.css
#track-search {
  background-color: #444;
  border: 1px solid #ccc;
  font-size: 14px;
  margin-top: 10px;
  font-family: "Interstate";
  font-weight: 100;
  position: relative;
  top: -3px;
  width: 400px;
  padding: 7px;
}

